--- a/config/hotspot.config
+++ b/config/hotspot.config
@@ -108,3 +108,30 @@ Type: full
 Architectures: windows-nano
 OS_Family: windows
 Directory: 16/jdk/windows/nanoserver-1809
+
+######################################################################
+
+Build: releases
+Type: full
+Architectures: aarch64 armv7l x86_64 ppc64le s390x
+OS_Family: linux
+Directory: 17/jdk/ubi
+
+Build: releases
+Type: full
+Architectures: aarch64 armv7l x86_64 ppc64le
+OS_Family: linux
+Directory: 17/jdk/ubi-minimal
+
+Build: releases
+Type: full
+Architectures: aarch64 armv7l x86_64 ppc64le
+OS_Family: linux
+Directory: 17/jre/ubi
+
+Build: releases
+Type: full
+Architectures: aarch64 armv7l x86_64 ppc64le
+OS_Family: linux
+Directory: 17/jre/ubi-minimal
+
